syntax = "proto3";
package com.antigravity;

import "server/heat_data.proto";

option java_package = "com.antigravity.proto";
option java_multiple_files = true;
option java_outer_classname = "HeatProto";

message Heat {
  repeated DriverHeatData heat_drivers = 1;
  int32 heat_number = 2;
  string object_id = 3;
  repeated string standings = 4;
}
